Multiple fixes: Story 84342770 (dropdown width not expanding to text width); Fixed dropdowns being cutoff; Story 84337384 (bullets appearing twice in WYSIWYG layout); Story 84341804 (bullet styles not carrying over); Story 84342662 (cog wheels behind banner);

--- a/profiles/openenterprise/themes/bella/less/header.less
+++ b/profiles/openenterprise/themes/bella/less/header.less
@@ -7,6 +7,9 @@ header {
 .navbar-default {
 	background-color: rgba(255, 255, 255, 0.95);
 	border-bottom: 1px solid @gray-light;
+	height: auto;
+	overflow: visible;
+	z-index: 99;
 	color: @gray;
 	.navbar-nav {
 		> li {
@@ -131,7 +134,6 @@ header {
 		
 		img {
 			display: inline-block;
-			width: 100%;
 		}
 		@media @mobile {
 			display: block;
@@ -227,16 +229,16 @@ header {
 							}
 						}
 					}
-					// &:hover {
-					// 	.navbar-is-fixed-top & {
-					// 		> .dropdown-menu {
-					// 			border-top: 0;
-					// 			display: block;
-					// 			position: fixed;
-					// 			left: auto;
-					// 		}
-					// 	}
-					// }
+					&:hover {
+						.navbar-is-fixed-top & {
+							> .dropdown-menu {
+								border-top: 0;
+								display: block;
+								position: fixed;
+								left: auto;
+							}
+						}
+					}
 				}
 			}
 		}
@@ -307,4 +309,27 @@ header {
 			}
 		}
 	}
+}
+
+.nav, .collapse, .dropup, .dropdown {
+  position: static;
+}  
+
+.dropdown-menu {
+  left: auto;
+  width: auto;
+}
+/* This enables hover dropdowns */
+.dropdown:hover .dropdown-menu {
+  display: block;
+  z-index: 99;
+  white-space: nowrap;
+}
+.dropdown:hover .dropdown-menu > li > a {
+  width: auto;
+  white-space: nowrap;
+}
+.nav.navbar-right .dropdown-menu {
+  left: auto;
+  right: 0;
 }
